# rocket-tst

./: .gitignore  README.md  voz.txt
fullstack/: Cargo.toml
fullstack/src/: main.rs
fullstack/static/: accounts.html  index.html  script.js  styles.css
pessoas/: Cargo.toml  people.db
pessoas/src/: main.rs
src/: main.rs
