[package]
name = "rocket_project"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }  # Habilita o suporte a JSON
rusqlite = "0.26"   # Para interação com o SQLite
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

